src/objects/Invoice_Example__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Amount__c - (Total_Credit__c  +  Total_Payment__c  +  Total_Write_off__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <label>Bank Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Company_Name__c</fullName>
        <label>Billing Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <label>Billing Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Language__c</fullName>
        <label>Billing Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese - Traditional</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Memo__c</fullName>
        <inlineHelpText>Background from AR if a credit or other issue occured with the invoice.</inlineHelpText>
        <label>Credit Memo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the Invoice ID from Accounts Receivable System.</inlineHelpText>
        <label>External System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicator__c</fullName>
        <description>This field is an icon that indicates status, tied to the Invoice Status field.</description>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status__c, 
&quot;Draft&quot;, &quot;0156A000001HTLQ&amp;oid=00D6A000001jCaL&quot;, 
&quot;Pending&quot;,&quot;0156A000001HTLS&amp;oid=00D6A000001jCaL&quot;, 
&quot;Finalized&quot;, &quot;0156A000001HTLN&amp;oid=00D6A000001jCaL&quot;, 
&quot;Overdue&quot;,&quot;0156A000001HTLO&amp;oid=00D6A000001jCaL&quot;, 
&quot;0156A000001HTLN&amp;oid=00D6A000001jCaL&quot;),&quot;Status&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Email_Date__c</fullName>
        <label>Last Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Print_Date__c</fullName>
        <label>Last Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Be_Emailed__c</fullName>
        <label>To Be Emailed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_Be_Printed__c</fullName>
        <label>To Be Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Credit__c</fullName>
        <label>Total Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment__c</fullName>
        <label>Total Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Write_off__c</fullName>
        <label>Total Write-off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This is to ensure that icons show in Salesforce and Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Payment__c</columns>
        <columns>Balance_Due__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>United_Partners_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Payment__c</columns>
        <columns>Balance_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>United Partners</value>
        </filters>
        <label>Your Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Invoice-{000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>